[gd_scene load_steps=18 format=2]

[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Game/PlaceHolderShop/Backpack.gd" type="Script" id=3]
[ext_resource path="res://Resources/Custom Resources/AlphaItemPool.tres" type="Resource" id=4]
[ext_resource path="res://Game/PlaceHolderShop/Items.gd" type="Script" id=5]
[ext_resource path="res://Game/PlaceHolderShop/UI.gd" type="Script" id=6]
[ext_resource path="res://Game/PlaceHolderShop/Gold.gd" type="Script" id=7]
[ext_resource path="res://Resources/Custom Resources/CurrentBobberStats.tres" type="Resource" id=8]
[ext_resource path="res://Resources/Custom Resources/CurrentBackPack.tres" type="Resource" id=9]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="PlaceHolderShop" type="Node2D"]

[node name="Pond" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
bobber_stats = ExtResource( 8 )
backpack = ExtResource( 9 )
game_scene = "res://Game/WaveSystem/WaveLevel.tscn"

[node name="Shop" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -336.0
margin_right = 169.0
margin_bottom = -268.0
custom_fonts/font = SubResource( 1 )
text = "The Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 24.0
margin_right = 238.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Gold: "
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -224.0
margin_right = 520.0
margin_bottom = -80.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
item_pool = ExtResource( 4 )

[node name="Item1" type="Button" parent="UI/Items"]
margin_right = 344.0
margin_bottom = 144.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Item1"

[node name="Item2" type="Button" parent="UI/Items"]
margin_left = 348.0
margin_right = 692.0
margin_bottom = 144.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Item2"

[node name="Item3" type="Button" parent="UI/Items"]
margin_left = 696.0
margin_right = 1040.0
margin_bottom = 144.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Item3"

[node name="BackpackLabel" type="Label" parent="UI"]
margin_left = 652.0
margin_top = 336.0
margin_right = 907.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 4 )
text = "My Backpack!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellLabel" type="Label" parent="UI"]
margin_left = 1176.0
margin_top = 336.0
margin_right = 1256.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 4 )
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backpack" type="HBoxContainer" parent="UI"]
margin_left = 656.0
margin_top = 392.0
margin_right = 1256.0
margin_bottom = 688.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="UI/Backpack"]
margin_right = 415.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Item1" type="Button" parent="UI/Backpack/Items"]
margin_right = 415.0
margin_bottom = 56.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )

[node name="Item2" type="Button" parent="UI/Backpack/Items"]
margin_top = 60.0
margin_right = 415.0
margin_bottom = 116.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )

[node name="Item3" type="Button" parent="UI/Backpack/Items"]
margin_top = 120.0
margin_right = 415.0
margin_bottom = 176.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )

[node name="Item4" type="Button" parent="UI/Backpack/Items"]
margin_top = 180.0
margin_right = 415.0
margin_bottom = 236.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )

[node name="Item5" type="Button" parent="UI/Backpack/Items"]
margin_top = 240.0
margin_right = 415.0
margin_bottom = 296.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )

[node name="Quantity" type="VBoxContainer" parent="UI/Backpack"]
margin_left = 419.0
margin_right = 523.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/Backpack/Quantity"]
margin_right = 104.0
margin_bottom = 56.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/Backpack/Quantity"]
margin_top = 60.0
margin_right = 104.0
margin_bottom = 116.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Label3" type="Label" parent="UI/Backpack/Quantity"]
margin_top = 120.0
margin_right = 104.0
margin_bottom = 176.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Label4" type="Label" parent="UI/Backpack/Quantity"]
margin_top = 180.0
margin_right = 104.0
margin_bottom = 236.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Label5" type="Label" parent="UI/Backpack/Quantity"]
margin_top = 240.0
margin_right = 104.0
margin_bottom = 296.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Sell" type="VBoxContainer" parent="UI/Backpack"]
margin_left = 527.0
margin_right = 600.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Button" type="Button" parent="UI/Backpack/Sell"]
margin_right = 73.0
margin_bottom = 56.0
size_flags_vertical = 3

[node name="Button2" type="Button" parent="UI/Backpack/Sell"]
margin_top = 60.0
margin_right = 73.0
margin_bottom = 116.0
size_flags_vertical = 3

[node name="Button3" type="Button" parent="UI/Backpack/Sell"]
margin_top = 120.0
margin_right = 73.0
margin_bottom = 176.0
size_flags_vertical = 3

[node name="Button4" type="Button" parent="UI/Backpack/Sell"]
margin_top = 180.0
margin_right = 73.0
margin_bottom = 236.0
size_flags_vertical = 3

[node name="Button5" type="Button" parent="UI/Backpack/Sell"]
margin_top = 240.0
margin_right = 73.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="NextWave" type="Button" parent="UI"]
margin_left = 96.0
margin_top = 584.0
margin_right = 256.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 7 )
text = "Next wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reroll" type="Button" parent="UI"]
margin_left = 1088.0
margin_top = 24.0
margin_right = 1248.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 7 )
text = "Reroll (2)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransition" parent="UI" instance=ExtResource( 10 )]

[connection signal="pressed" from="UI/Items/Item1" to="UI" method="_on_Item1_pressed"]
[connection signal="pressed" from="UI/Items/Item2" to="UI" method="_on_Item2_pressed"]
[connection signal="pressed" from="UI/Items/Item3" to="UI" method="_on_Item3_pressed"]
[connection signal="pressed" from="UI/NextWave" to="UI" method="_on_NextWave_pressed"]
[connection signal="pressed" from="UI/Reroll" to="UI" method="_on_Reroll_pressed"]
